--- a/lexy_gregory_projects.html
+++ b/lexy_gregory_projects.html
@@ -18,7 +18,7 @@
             <a href="#" class="nav-branding">LEXY GREGORY</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="lexy_gregory.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="lexy_gregory_about.html" class="nav-link">About</a>
